<resources>
    <string name="app_name">NXT Control</string>

    <!-- ConnectionFragment -->
    <string name="connect_button">Connect</string>
    <string name="batteryLevel">Battery Level</string>

    <!-- DeviceListActivity -->
    <string name="scanning">Scanning for Devices...</string>
    <string name="select_device">Select a Device to Connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices were found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for Devices</string>

    <!-- Main Menu -->
    <string name="action_preferences">Preferences</string>
    <string name="action_about">About App</string>

    <!-- DirectionalDriveFragment -->
    <string name="swaptotilt">Tilt Drive Mode</string>

    <!-- TiltDriveFragment -->
    <string name="instructions">Tilt your device in the corresponding\n direction to move the robot</string>
    <string name="tiltPowerLabel">Power</string>
    <string name="swaptodirectional">Directional Drive Mode</string>

    <!-- SensorFragment -->
    <string name="sensorDialog">Select NXT Sensor Type</string>

    <!-- Preferences -->
    <string name="pref_battery">Battery Level</string>
    <string name="pref_batterySummary">Poll battery level every 1 minute</string>
    <string name="pref_speed">Default Speed</string>
    <string name="pref_speedSummary">Set default power level for driving to 100 instead of 75</string>
    <string name="pref_interval">Time Interval</string>
    <string name="pref_intervalSummary">Time between each servo/sensor polling</string>

    <!-- Preferences Headers -->
    <string name="prefsect_polling">Polling Settings</string>
    <string name="prefsect_pollingSummary">How often to poll the different sensors/servos</string>
    <string name="prefsect_servo">Servo Settings</string>
    <string name="prefsect_servoSummary">Settings to control default stuff for the servos</string>
</resources>